authen and autho working, admin functionalities are almost implemented
