# src/main/java/com/mahashakti/mahashaktiBE/controller/UsersController.java
@@ -2,9 +2,11 @@ package com.mahashakti.mahashaktiBE.controller;
 
 import com.mahashakti.mahashaktiBE.service.UsersService;
 import com.mahashakti.mahashaktiBe.api.UsersApi;
+import com.mahashakti.mahashaktiBe.model.Login;
 import com.mahashakti.mahashaktiBe.model.MahashaktiResponse;
 import com.mahashakti.mahashaktiBe.model.SignUp;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -17,13 +19,32 @@ public class UsersController implements UsersApi {
 
     @Override
     public ResponseEntity<MahashaktiResponse> postUsersSignup(SignUp signup) {
-        usersService.saveUser(signup);
+
+        SignUp signedUpUser = usersService.saveUser(signup);
+
         MahashaktiResponse mahashaktiResponse = new MahashaktiResponse();
         mahashaktiResponse.code("MSBE200");
-        mahashaktiResponse.setMessage("USER ADDED");
+        mahashaktiResponse.setMessage("USER CREATED");
         mahashaktiResponse.setStatus("SUCCESS");
 
-        return ResponseEntity.ok(mahashaktiResponse);
+        mahashaktiResponse.setData(signedUpUser);
+
+        return new ResponseEntity<>(mahashaktiResponse, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<MahashaktiResponse> postUsersLogin(Login login) {
+
+        Login loggedIn = usersService.authenticateAndGenerateJWT(login);
+
+        MahashaktiResponse mahashaktiResponse = new MahashaktiResponse();
+        mahashaktiResponse.code("MSBE200");
+        mahashaktiResponse.setMessage("USER AUTHENTICATED");
+        mahashaktiResponse.setStatus("SUCCESS");
+
+        mahashaktiResponse.setData(loggedIn);
+
+        return new ResponseEntity<>(mahashaktiResponse, HttpStatus.OK);
     }
 
 }
